--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -31,8 +31,6 @@
     <hr />
     <div class="footer">
       &copy; <a href="{{ path }}">Copyright</a> {{ copyright }}.
-    {%- if show_sphinx %}
-      {% trans sphinx_version=sphinx_version|e %}Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> {{ sphinx_version }}.{% endtrans %}
-    {%- endif %}
+      Created using <a href="http://sphinx.pocoo.org/">Sphinx</a>.
     </div>
 {%- endblock %}
