--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -31,6 +31,7 @@
     <hr />
     <div class="footer">
       &copy; <a href="{{ path }}">Copyright</a> {{ copyright }}.
+      <a href="{{ rss_link }}">RSS Feed</a>.
       Created using <a href="http://sphinx.pocoo.org/">Sphinx</a>.
     </div>
 {%- endblock %}
