Point feed link to FeedBurner.

--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -31,7 +31,7 @@
     <hr />
     <div class="footer">
       &copy; <a href="{{ path }}">Copyright</a> {{ copyright }}.
-      <a href="{{ rss_link }}">RSS Feed</a>.
+      <a href="http://feeds.feedburner.com/keegancsmith_blog">RSS Feed</a>.
       Created using <a href="http://sphinx.pocoo.org/">Sphinx</a>.
     </div>
 {%- endblock %}
