--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -8,7 +8,7 @@
 <div id="header">
   <a class="title" href="{{ pathto('index') }}">Keegan Carruthers-Smith</a>
   <ul class="navigation">
-    <li><a href="{{ pathto('CV') }}" title="Curriculm Vitae">cv</a></li>
+    <li><a href="{{ pathto('CV') }}" title="Curriculum Vitae">cv</a></li>
     <li><a href="{{ pathto('blog') }}" title="Blog">blog</a></li>
     <li><a href="{{ pathto('code') }}" title="Code">code</a></li>
     <li><a href="{{ pathto('misc') }}" title="Miscellaneous">misc</a></li>
